# MatrixOS

./: MatrixOS.code-workspace  main.cpp
applications/Matrix/FactoryMenu/: KeypadTester.cpp
applications/Performance/8x8/: Performance8x8.h
devices/MatrixBlock5/: Family.cpp
devices/MatrixBlock6_ESP32S2/Varients/MatrixB6Prototype1/: Config.h
devices/MatrixBlock6_ESP32S3/: Applications.h  Family.cpp  Family.h  sdkconfig.defaults
devices/MatrixBlock6_ESP32S3/Drivers/: BLEMIDI.cpp  ESPNOW.cpp  Keypad.cpp  MassStorage.cpp  TouchBar.cpp  USB.cpp
devices/MatrixBlock6_ESP32S3/ULP/: keypad.c
devices/MatrixBlock6_ESP32S3/Varients/: CMakeLists.txt
devices/MatrixBlock6_ESP32S3/Varients/Matrix/: Config.h
devices/MatrixBlock6_ESP32S3/Varients/MatrixB6Prototype2/: Config.h
devices/MatrixBlock6_ESP32S3/Varients/MatrixPro/: Config.h
devices/MatrixBlock6_ESP32S3/Varients/MatrixPro/V100/: Config.h
devices/MatrixBlock6_ESP32S3/Varients/MatrixPro/V110/: Config.h
os/: MatrixOS.h
os/framework/: KeyEvent.h  KeyInfo.h
os/system/: LED.cpp  Parameters.h  System.cpp  System.h  USB.cpp
os/system/USB/: CDC.cpp  MIDI.cpp  MSC.cpp  USB.cpp  tusb_config.h  usb_descriptors.cpp
os/ui/: UI.cpp
